JS and Dom manipulation completed

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         </div>
         <hr/>
         <div class="out">
-            <b>Your Age in Days is Dispalyed Here...</b>
+            <b id="out">Your Age in Days is Dispalyed Here...</b>
         </div>
         <hr/><hr/>
+        <script src="index.js"></script>
     </body>
 </html>
